Prevent info section from growing too small on medium screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,11 @@ main {
         flex-direction: row;
         justify-content: center;
     }
+
+    #info {
+        height: 200px;
+        max-height: 100%;
+    }
 }
 
 @media screen and (min-width: 900px) {
